Update models, get allowed flows
